<resources>
    <string name="app_name">HackerNews</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_topstories">Top Stories</string>
    <string name="menu_newstories">New Stories</string>
    <string name="menu_beststories">Best Stories</string>
    <string name="menu_askstories">Ask Stories</string>
    <string name="menu_showstories">Show Stories</string>
    <string name="menu_jobstories">Job Stories</string>
    <string name="fragment_home_articles_list_item_points_description">Total Points</string>
    <string name="fragment_home_articles_list_item_comments_description">Number of Comments</string>
    <string name="menu_main_action_articles_refresh_title">Refresh</string>
    <string name="item_base_url">news.ycombinator.com</string>
    <string name="fragment_story_imageview_nocomments_description">No Comments</string>
    <string name="fragment_story_nocomments_text">No Comments Yet</string>
    <string name="fragment_job_icon_description">Job Icon</string>
    <string name="comment_collapse_text">Collapse</string>
    <string name="comment_expand_text">Expand</string>
    <string name="comment_expand_text_description">Comment Collapse or Expand Text</string>
    <string name="offline_view_cloud_image_description">No connection available</string>
    <string name="offline_view_text">No Connection Available</string>
</resources>
