<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_topstories">

    <fragment
        android:id="@+id/nav_topstories"
        android:name="emilsoft.hackernews.fragment.HomeFragment"
        android:label="@string/menu_topstories"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_topstories_to_nav_story"
            app:destination="@id/nav_story" />
        <action
            android:id="@+id/action_nav_topstories_to_nav_ask"
            app:destination="@id/nav_ask" />
        <action
            android:id="@+id/action_nav_topstories_to_nav_job"
            app:destination="@id/nav_job" />
        <argument
            android:name="arg_view_stories"
            app:argType="integer"
            android:defaultValue="0" />
    </fragment>

    <fragment
        android:id="@+id/nav_item"
        android:name="emilsoft.hackernews.fragment.ItemFragment"
        android:label="Item"
        tools:layout="@layout/viewpager_item"
        />

    <fragment
        android:id="@+id/nav_story"
        android:name="emilsoft.hackernews.fragment.StoryFragment"
        android:label="Story"
        tools:layout="@layout/fragment_item" />

    <fragment
        android:id="@+id/nav_ask"
        android:name="emilsoft.hackernews.fragment.AskFragment"
        android:label="Ask"
        tools:layout="@layout/fragment_item" />

    <fragment
        android:id="@+id/nav_job"
        android:name="emilsoft.hackernews.fragment.JobFragment"
        android:label="Job"
        tools:layout="@layout/fragment_item"/>

    <fragment
        android:id="@+id/nav_newstories"
        android:name="emilsoft.hackernews.fragment.HomeFragment"
        android:label="@string/menu_newstories"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_newstories_to_nav_story"
            app:destination="@id/nav_story" />
        <action
            android:id="@+id/action_nav_newstories_to_nav_ask"
            app:destination="@id/nav_ask" />
        <action
            android:id="@+id/action_nav_newstories_to_nav_job"
            app:destination="@id/nav_job" />
        <argument
            android:name="arg_view_stories"
            app:argType="integer"
            android:defaultValue="2" />
    </fragment>

    <fragment
        android:id="@+id/nav_beststories"
        android:name="emilsoft.hackernews.fragment.HomeFragment"
        android:label="@string/menu_beststories"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_beststories_to_nav_story"
            app:destination="@id/nav_story" />
        <action
            android:id="@+id/action_nav_beststories_to_nav_ask"
            app:destination="@id/nav_ask" />
        <action
            android:id="@+id/action_nav_beststories_to_nav_job"
            app:destination="@id/nav_job" />
        <argument
            android:name="arg_view_stories"
            app:argType="integer"
            android:defaultValue="1" />
    </fragment>

    <fragment
        android:id="@+id/nav_askstories"
        android:name="emilsoft.hackernews.fragment.HomeFragment"
        android:label="@string/menu_askstories"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_askstories_to_nav_ask"
            app:destination="@id/nav_ask" />
        <argument
            android:name="arg_view_stories"
            app:argType="integer"
            android:defaultValue="3" />
    </fragment>

    <fragment
        android:id="@+id/nav_showstories"
        android:name="emilsoft.hackernews.fragment.HomeFragment"
        android:label="@string/menu_showstories"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_showstories_to_nav_story"
            app:destination="@id/nav_story" />
        <argument
            android:name="arg_view_stories"
            app:argType="integer"
            android:defaultValue="4" />
    </fragment>

    <fragment
        android:id="@+id/nav_jobstories"
        android:name="emilsoft.hackernews.fragment.HomeFragment"
        android:label="@string/menu_jobstories"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_jobstories_to_nav_job"
            app:destination="@id/nav_job" />
        <argument
            android:name="arg_view_stories"
            app:argType="integer"
            android:defaultValue="5" />
    </fragment>
</navigation>